second post created

--- a/_posts/2024-05-06-post1.md
+++ b/_posts/2024-05-06-post1.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Is Melbourne getting too hot?          
+title: Is Melbourne getting too hot? Part I         
 subtitle: "Exploring canopies distribution over Melbourne City and visualizing the impacts of temperature raising"
 date: 2024-05-06 23:45:13 -0400
-background: '/img/posts/01.jpg'
+background: '/img/posts/sun.jpg'
 ---
 Global warming has been a known threat for long time. It is common knowledge that urban areas are heating up. When in metropolitan areas building are built close together, they trap the heat, which leads to an increase of the surrounding temperatures.
 
