commit with part 2

--- a/_posts/2024-05-06-post2.md
+++ b/_posts/2024-05-06-post2.md
@@ -8,6 +8,19 @@ background: '/img/posts/sun.jpg'
 
 With all that doom and gloom is there hope to mitigate some of these effects by creating more dense urban forests in Melbourne? Using the [Tree Canopy survey from 2021](https://data.melbourne.vic.gov.au/explore/dataset/tree-canopies-2021-urban-forest/information/?location=15,-37.79968,144.96604&basemap=mbs-7a7333) we are able to have a very accurate overview of Melbournes current state of foliage coverage in the inner suburbs of the city, each tree is surveyed for the area of canopy. This has allowed us to create a nice bar chart that shows the cumulative canopy area of the trees surveyed per suburb, to better normalise the data we have divided it by the total area of the **postcode** that it is in. 
 
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <!-- Image insertion -->
+    <img src="/img_post/canopy_area.png" alt="Descriptive text about the image" width="800" height="500">
+    <p>Fig 1. - Canopy areas to temperature relation sorted by postcode. </p>
+</body>
+</html>
+
 ### Post codes, a quick rundown:
 *A quick definition of a **postcode**: Melbourne is divided into suburbs, these have a unique name to them, then there are collections of suburbs under one **postcode**, some postcodes contain more suburbs than others.* 
 
@@ -20,13 +33,14 @@ Linking the two datasets together allows us to investigate whether it is true th
 
 # Can trees reduce the severity of weather events?
 
-<iframe width="140%" height="800" src="/html/bokeh_variation_temp.html"></iframe> Fig 2. -
+<iframe width="140%" height="800" src="/html/bokeh_variation_temp.html"></iframe> Fig 2. -Average of the sensor data per postcode over two days during April
 
 Reducing average temperatures is one thing, but stablising highly volatile weather events where temperatures can swing wildly is another important factor to investigate. Large swings in weather and temperature can lead a population to shorter lifespans, because [large fluctuations in temperature during summer boost the risk of death](https://www.nih.gov/news-events/nih-research-matters/summer-temperature-swings-linked-shorter-lifespan) in older people, very young and people with chronic diseases. To give people a fair chance at life in our changing climate once again **we must** look for solutions to reduce the severity of turbulent weather events. [Trees offer the possibility to offset this, and increase general human comfort](https://pure.manchester.ac.uk/ws/portalfiles/portal/54524206/FULL_TEXT.PDF). 
 
 To see if this is working out in Melbourne we plot the average of the sensor data per postcode over two days during April. This way we can see if some postcodes see not only reductions in overall temperature but if the curves are less volatile giving us idication that shifts in weather will also be slowed down. Now that we know which postcodes are the most green, we will investigate **3052** and compare it to the fluctuation in **3006**. We can see that **3006** experience both higher temperatures but also a slightly larger spike with rising temperature, giving us maybe an insight that the area is less resistant to the changing temperature. I urge the reader to interact with the plot and see the relation of change in temperature and canopy area, to see if there some immunity to strong fluctuations. *It is to be noted* that due to the sparcity of some of the areas, it is not possible to make a definitive conclusion on this hypothesis when cumulatively comparing the sensors. 
 
-<iframe width="140%" height="800" src="/html/soil_sensor_canopy_density_map.html"></iframe> Fig 3. -
+<iframe width="140%" height="800" src="/html/soil_sensor_canopy_density_map.html"></iframe> 
+Fig 3. - Timeseries showing the temperature of areas for the year 2022. Scroll the slider on the top left and notice how the temperature sensors closed to the water have less temperature oscillations. 
 
 Therefore we will investigate through the power of *one more* visualisation by harnessing the beauty of geospatial data and maps! By doing so we can plot each sensor (that is at a 10-20cm depth) individually to visually demonstrate how temperatures can fluctuate more rapidly in localised areas with less tree canopy which is show as a heatmap. Drag the timeslider around on the map, this is moving the sensor data in thirty minute increments over a three month period from March to June, the more flickering that occurs in some areas will show more susceptibility to temperature change (which is bad!). 
 
