--- a/_posts/2024-05-06-post1.md
+++ b/_posts/2024-05-06-post1.md
@@ -15,3 +15,24 @@ Olympic Park Melbourne is an area in the inner city not surrounded by a lot of b
 
 Is there a solution to global warming? For sure there is and they have been largely discussed over and over but in the meantime the world keeps spinning and living in the center of a big city can become unsustainable. What is that make you relief from the sun? Where people can find refuge in extreme heat ?  Shadow, you will look for shadow. There have been many proven and successful studies suggesting that trees and other foliage promotes cooler environments through shade and evapotranspiration. This leads also [many other benefits](https://www.epa.gov/heatislands/using-trees-and-vegetation-reduce-heat-islands) such as less weight on the health system through reduction of heat related illnesses, improved air quality and reduced energy consumption. 
 
+Melbourne administration understood the vital role of urban reforestation to face climate change. [A healthy urban forest](https://www.natureaustralia.org.au/newsroom/living-melbourne/) will play a critical role in maintaining the health and liveability of Melbourne. They are aiming to increase canopy cover from 22 per cent to 40 per cent by 2040.  
+
+<iframe width="140%" height="800" src="/html/heatmap_2021.html"></iframe> Map 1. -Tree canopy distribution. 
+
+The heatmaps from 2014 to 2016 demonstrate relatively minor changes in canopy distribution in Melbourne, correlating with the closeness in sample sizes during these years. The heatmaps reveal that while central and northwestern Melbourne consistently show dense canopy coverage, the outer areas exhibit less coverage. Conversely, despite the similarity in sample sizes between 2013 and 2019, the heatmaps display vastly different results. This discrepancy can be attributed to the differences in data representation: in 2013, tree canopies were recorded using multipolygon shapes, whereas in 2019, they were represented with simpler polygon shapes. Such changes in data structure could significantly impact the visual and statistical interpretation of canopy coverage
+
+From the heatmap, it's hard to see the increment of tree density from 2019 to 2021 which indicate the growing of tree is slow, but from the Bar plot below, the total area indeed increased.
+
+In conclusion, while Melbourne has made significant strides towards enhancing its urban forest, the city still faces hurdles in achieving its canopy cover goals. Continued efforts and adherence to the urban reforestation strategy are crucial for reaching these targets and maintaining Melbourne's status as one of the world's most liveable cities.
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <!-- Image insertion -->
+    <img src="/img_post/sample&area.png" alt="Descriptive text about the image" width="900" height="300">
+    <p>Fig 1. - Canopy areas to temperature relation sorted by postcode. </p>
+</body>
+</html>
