--- a/_posts/2024-05-06-post1.md
+++ b/_posts/2024-05-06-post1.md
@@ -13,7 +13,7 @@ Big metropolitan areas like Melbourne, which count a population of over 5 millio
 
 Olympic Park Melbourne is an area in the inner city not surrounded by a lot of building. However, as you can see from the graph the temperature mean went up during the year. The reader might notice some bumps in the graph. An interesting one is the peak between 2000 and 2020. Those peaks where exactly registered in 2009 and 2014. [The January 2009](https://knowledge.aidr.org.au/resources/health-heatwave-south-eastern-australia-2009/) heatwave in Victoria was an event that entered history books because it was of an unprecedented intensity, as you might notice from the peak, and duration with maximum temperature of 15 celsius above average. 
 
-Is there a solution to global warming? For sure there is and they have been largely discussed over and over but in the meantime the world keeps spinning and living in the center of a big city can become unsustainable. What is that make you relief from the sun? Where people can find refuge in extreme heat ?  Shadow, you will look for shadow. There have been many proven and successful studies suggesting that trees and other foliage promotes cooler environments through shade and evapotranspiration. This leads also [many other benefits](https://www.epa.gov/heatislands/using-trees-and-vegetation-reduce-heat-islands) such as less weight on the health system through reduction of heat related illnesses, improved air quality and reduced energy consumption. It can be proved in the graph below that for district with more trees canopies the health rating is higher. It is interesting how for 3004 postal code the health rating is low despite it is one of the are with the most trees. 
+Is there a solution to global warming? For sure there is and they have been largely discussed over and over but in the meantime the world keeps spinning and living in the center of a big city can become unsustainable. What is that make you relief from the sun? Where people can find refuge in extreme heat ?  Shadow, you will look for shadow. There have been many proven and successful studies suggesting that trees and other foliage promotes cooler environments through shade and evapotranspiration. This leads also [many other benefits](https://www.epa.gov/heatislands/using-trees-and-vegetation-reduce-heat-islands) such as less weight on the health system through reduction of heat related illnesses, improved air quality and reduced energy consumption. It can be proved in the graph below that for districts with more tree canopies the health rating is higher. It is interesting how for 3004 postal code the health rating is low despite it is one of the area with the most trees. 
 
 ![tempraise](/img_post/health.png) Fig 1. - Show the percentage of the report regarding health in percentage for the categories displayed on the left for 2022.
 
